[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "pajowu", email = "git@ca.pajowu.de"},
]
dependencies = [
    "automerge @ git+https://github.com/transcribee/automerge-py.git@2d12fa1306f01a3bc3eb33dd71ffe28f591d8fed",
    "requests>=2.28.2",
    "inquirer>=3.1.3",
    "websockets>=11.0.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}
